--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Index.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Index.cshtml
@@ -12,7 +12,7 @@
     }
 }
 <ul class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Transaction")">首页</a></li>
+    <li><a href="@Url.Action("Index", "Home")">首页</a></li>
     <li class="active">@Model.Metadata.Name</li>
 </ul>
 <form method="get" class="form-horizontal">
