--- a/src/samples/Wodsoft.ComBoost.Forum/Views/Shared/_Layout.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                     else
                     {
                         <li><a href="@Url.Action("SignIn", "Account", new { returnUrl = Context.Request.Path })">登录</a></li>
-                        <li><a href="@Url.Action("SignOut", "Account", new { returnUrl = Context.Request.Path })">注册</a></li>
+                        <li><a href="@Url.Action("SignUp", "Account", new { returnUrl = Context.Request.Path })">注册</a></li>
                     }
                 </ul>
             </div>
