--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/ImageViewer.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/ImageViewer.cshtml
@@ -1,2 +1,5 @@
 ﻿@model MvcEditorModel
-<img src="@Url.Action("ImageToProperty", new { id Model.Entity.Index, property = Model.Metadata.ClrName })/>
+@if (Model.Value != null)
+{
+    <img src="@Url.Action("ImageToProperty", new { path = Model.Value })" />
+}
