--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/DateTimeViewer.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/DateTimeViewer.cshtml
@@ -4,5 +4,5 @@
 }
 @if (value != null)
 {
-    @value.Value.ToLongDateString() @value.Value.ToLongTimeString()
+    @value.Value.ToString("yyyy-MM-dd HH:mm:ss")
 }
