--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/EnumEditor.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/EnumEditor.cshtml
@@ -1,29 +1,29 @@
 ﻿@model MvcEditorModel
 @{
-    EntityExtension.EnumItem[] items;
-    Type enumType;
-    if (Model.Metadata.ClrType.IsGenericType)
+    Type enumType = Model.Metadata.ClrType;
+    if (enumType.GetTypeInfo().IsGenericType)
     {
         enumType = Model.Metadata.ClrType.GetGenericArguments()[0];
-        items = Html.EnumAnalyze(enumType);
-        enumType = Enum.GetUnderlyingType(enumType);
     }
-    else
+    var items = Enum.GetNames(enumType).Select(t =>
     {
-        items = Html.EnumAnalyze(Model.Metadata.ClrType);
-        enumType = Enum.GetUnderlyingType(Model.Metadata.ClrType);
-    }
+        var field = enumType.GetField(t);
+        var name = field.GetCustomAttribute<DisplayNameAttribute>()?.DisplayName ?? t;
+        var value = (int)field.GetValue(null);
+        return new { Name = name, Value = value };
+    }).ToArray();
+    enumType = Enum.GetUnderlyingType(Model.Metadata.ClrType);
 }
-@if (Model.Metadata.ClrType.GetCustomAttributes(typeof(FlagsAttribute), true).Length == 0)
+@if (Model.Metadata.ClrType.GetTypeInfo().GetCustomAttribute<FlagsAttribute>() == null)
 {
     <select id="@Model.Metadata.ClrName" name="@Model.Metadata.ClrName" class="form-control" style="padding-right: 12px;">
-        @if (Model.Metadata.ClrType.IsGenericType)
+        @if (Model.Metadata.ClrType.GetTypeInfo().IsGenericType)
         {
             <option value="" @Html.Raw(Model.Value == null ? " selected=\"selected\"" : "")></option>
         }
         @for (int i = 0; i < items.Length; i++)
         {
-            <option value="@items[i].Value" @Html.Raw(object.Equals(items[i].Value, Convert.ChangeType(Model.Value, enumType)) ? " selected=\"selected\"" : "")>@items[i].Name</option>
+            <option value="@items[i].Value" @Html.Raw((items[i].Value == Convert.ToInt32(Model.Value)) ? " selected=\"selected\"" : "")>@items[i].Name</option>
         }
     </select>
 }
