--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -23,11 +23,30 @@
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Enhanced Authentication 授权后台</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <ul class="nav navbar-nav">
+                        <li><a asp-area="Admin" asp-controller="Home" asp-action="Index">主页</a></li>
+                        <li><a asp-area="Admin" asp-controller="Board" asp-action="Index">板块管理</a></li>
+                        <li><a asp-area="Admin" asp-controller="Forum" asp-action="Index">论坛管理</a></li>
+                        <li><a asp-area="Admin" asp-controller="Member" asp-action="Index">用户管理</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><p class="navbar-text">你好，@User.Identity.Name</p></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="SignOut">注销</a></li>
+                    </ul>
+                }
+            </div>
         </div>
     </nav>
     <div class="container">
