修复页面问题

--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Detail.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Detail.cshtml
@@ -12,7 +12,7 @@
     }
 }
 <ul class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Transaction")">首页</a></li>
+    <li><a href="@Url.Action("Index", "Home")">首页</a></li>
     <li><a href="@Html.Raw(Url.Action("Index"))">@Model.Metadata.Name</a></li>
     <li class="active">详情</li>
 </ul>
