--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Edit.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/Edit.cshtml
@@ -29,7 +29,7 @@
     </div>
 </div>
 <ul class="breadcrumb">
-    <li><a href="@Url.Action("Index", "Transaction")">首页</a></li>
+    <li><a href="@Url.Action("Index", "Home")">首页</a></li>
     <li><a href="@Html.Raw(Url.Action("Index"))">@Model.Metadata.Name</a></li>
     <li class="active">@(Model.Item.IsNewCreated ? "新建" : "编辑")</li>
 </ul>
