--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Enhanced Authentication 授权后台</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ComBoost论坛管理控制台</a>
             </div>
             <div class="navbar-collapse collapse">
                 @if (User.Identity.IsAuthenticated)
