--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><p class="navbar-text">你好，@User.Identity.Name</p></li>
-                        <li><a asp-area="" asp-controller="Account" asp-action="SignOut">注销</a></li>
+                        <li><a asp-area="Admin" asp-controller="Account" asp-action="SignOut">注销</a></li>
                     </ul>
                 }
             </div>
