--- a/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Views/_ViewImports.cshtml
@@ -2,8 +2,7 @@
 @using Wodsoft.ComBoost.Forum.Entity
 @using Wodsoft.ComBoost.Data
 @using Wodsoft.ComBoost.Data.Entity
-@using Wodsoft.ComBoost.Mvc;
-@using Wodsoft.ComBoost.Security;
+@using Wodsoft.ComBoost.Mvc
+@using Wodsoft.ComBoost.Security
 @using System.ComponentModel
-@using Microsoft.EntityFrameworkCore;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
