--- a/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/_ViewImports.cshtml
+++ b/src/samples/Wodsoft.ComBoost.Forum/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.ComponentModel;
+@using System.ComponentModel.DataAnnotations;
 @using System.Reflection;
 @using Wodsoft.ComBoost.Forum;
 @using Wodsoft.ComBoost.Data.Entity;
